test/fail/ajaxunknownid.app
//action refers to unknown object

application test

section pages

define page home() {
  block[id:= hoi, onclick := action {clear(fout);}] { "hoi1"} 
}
